src/App.css
body{
  margin: 0;
  font-family: 'Public Sans', sans-serif;
}
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.hero{
  height: 60vh;
  background-image: url(../public/Web\ Developer.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  
}
.navWrapper{
  display: flex;
  width: 100%;
  align-items: center;
  background-color: rgb(239, 239, 239);
  
 
}
.menu{
  background-image: url(../public/menuIcon.png);
  height: 30px;
  width: 30px;
  position: absolute;
  left: 30px;
  top: 20px;
  display: none;
}
ul{
  display: flex;
  align-items: left;
}
ul p{
  margin-right: 80px;
  
}
ul a{
  text-decoration: none;
  color: rgb(19, 19, 19);
}
ul a:hover{
  text-decoration: underline;
}


.navWrapper .name{
  position: absolute;
  right: 50px;
}
.homeWrapper{

}
.hero{
  
  
}
.heroBtn{
  width: 150px;
  height: 30px;
  background-color: rgb(216, 216, 216);
  border-radius: 20px;
  margin: auto;
  margin-top: 55vh;
  border-style: none;
}
.title{
  text-align: left;
}
#largeText{
  font-size: 84px;
  margin-left: 80px;
  margin-bottom: 0;
}
#smallerText{
  font-size: 36px;
  margin-left: 200px;
  margin-top: 0;
}
#welcomemsg{
  font-size: 18px;
  width: 350px;
  margin-left: 35%;
  text-align: left;
}
hr{
  width: 90%;
}
.spacing{
  height: 20px;
}
#welcomeBtn{
  width: 150px;
  height: 30px;
  background-color: rgb(216, 216, 216);
  border-radius: 20px;
  border-style: none;
  margin-left: 35%;
}
.welcomeWrapper{
  text-align: center;
  
  align-items: center;
  justify-content: center;
  
  
}
.welcmsgwrapper{
  width: 400px;
  text-align: center;
}
.welcomeimg{
  background-image: url(../public/compflower.gif);
  background-repeat: no-repeat;
  background-size: cover;
  width: 250px;
  height: 250px;
  margin-right: 10%;
  border-radius: 80px 80px 0px 0px;
  
}
.textimgwrapper{
  display: flex;
  justify-content: space-between;
}
.skillswrapper{
  background-color: #032A23;
  margin-bottom: -20px;
}
.skillswrapper h1{
  font-size: 84px;
  color: white;
}
.skillbox{
  color: white;
  
  border-radius: 10px;
  align-items: center;
  justify-content: center;
  max-height: 180px;
  min-height: 180px;
}
.skillbox h2{
  padding: 50px;
}

.skillboxwrapper{
  display: grid;
  grid-template-columns: 20% 20% 20% 20%;
  margin: auto;
  justify-content: center;
  align-items: center;
  gap: 20px;

}
.skillbtn{
  background-color: rgb(216, 216, 216);
  width: 150px;
  height: 30px;
  border-radius: 20px;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 50px;
  padding-top: 10px;
  
}
#skillsBtn{
  
  text-decoration: none;
}

.nameandlinks h1{
  text-align: left;
  
}
.nameandlinks ul{
  
}
.sociallinks{
  border-style: solid;
  border-width: 0.3px;
  border-color: white;
  border-radius: 10px;
  height: 120px;
  width: 150px;
  display: flex;
  justify-content: space-around;
}
.links{
  display: flex;
  justify-content: space-around;
}
.text{
  margin-bottom: 45px;
  margin-top: 15px;
}
.instagram{
  background-image: url(../public/6929237_instagram_icon.png);
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  background-size: cover;
  

}
.linkedin{
  background-image: url(../public/317725_linkedin_social_icon.png);
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 30px;
  margin-top: 5px;

}
.github{
  background-image: url(../public/3259374_github_media_social_icon.png);
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  background-size: cover;
  
}
.footerwrapper{
  background-color: #032A23;
  
  
}
.footerwrapper a{
  color: white;
}
.footerwrapper h1{
  color: white;
}
.footerwrapper .text{
  color: white;
}
.footerwrapper p{
  color: white;
  text-decoration: underline;
}
#projectTitle{
  font-size: 84px;
  text-align: left;
  margin-left: 10%;
}
#box1{
  background-image: url(../public/ss1.png);
  background-repeat: no-repeat;
  background-size: cover;
  width: 450px;
  height: 260px;
}
.projectbox{
  width: 450px;
  margin-top: 80px;
  border-style: solid;
  border-width: 1px;
  border-color: #032A23;
  
  
}
.btns{
  width: 450px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
  
 
}
.btns a{
 padding-top: 8px;
  border-radius: 20px;
  border-style: none;
  height: 30px;
  width: 130px;
  margin-top: 20px;
  background-color: rgb(216, 216, 216);
  text-decoration: none;
  color: #032A23;
  
}
.projectdisplaywrapper{
  
  display: grid;
  margin: auto;
  margin-bottom: 80px;
  grid-template-columns: 40% 40%;
  justify-content: center;
  align-items: center;
  gap: 5%;

}
.projtext{
  color: white;
  margin-top: -20px;
  height: 90px;
  padding-top: 1px;
  padding-bottom: 10px;
  align-items: center;
  justify-content: center;
}
.projectswrapper #topBtn{
  margin: 0;
  
}

#box2{
  background-image: url(../public/ss2.png);
  background-repeat: no-repeat;
  background-size: cover;
  width: 450px;
  height: 260px;
}
#box3{
  background-image: url(../public/ss2.png);
  background-repeat: no-repeat;
  background-size: cover;
  width: 450px;
  height: 260px;
}
#box4{
  background-image: url(../public/ss3.png);
  background-repeat: no-repeat;
  background-size: contain;
  width: 450px;
  height: 260px;
}

h1{
  font-family: 'Playfair Display', serif;
}
#aboutTitle{
  font-size: 84px;
  text-align: left;
  margin-left: 10%;
}
.aboutdisplay{
  
}
.area{
  
  display: flex;
  margin-bottom: 30px;
  justify-content: space-evenly;
  padding-top: 100px;
  
}
.text1{
  padding: 5px;
  width: 55%;
  color: #032A23;
  line-height: 2;
  border-style: solid;
  border-width: 1px;
  border-color: #032A23;
  margin-bottom: 100px;
  text-align: left;
}
.image1{
  background-image: url(../public/aboutimg1.png);
  background-repeat: no-repeat;
  background-size: contain;
  width: 240px;
  height: 240px;
  

}
.image2{
  background-image: url(../public/aboutimg2.png);
  background-repeat: no-repeat;
  background-size: contain;
  width: 300px;
  height: 300px;
  
}
.image3{
  background-image: url(../public/aboutimg3.png);
  background-repeat: no-repeat;
  background-size: contain;
  width: 260px;
  height: 260px;
  margin-left: 6%;
  margin-bottom: 100px;
  
}
.text2{
 height: fit-content;
 width: 300px;
  
  padding-left: 15px;
  padding-right: 15px;
 color: #032A23;
  border-style: solid;
  border-width: 1px;
  border-color: #032A23;
  justify-content: center;
  align-items: center;
  text-align: left;
  
}
#contactTitle{
  font-size: 84px;
  text-align: left;
  margin-left: 10%;
}
.contimg{
  background-image: url(../public/contactImg.png);
  background-repeat: no-repeat;
  background-size: cover;
  width: 260px;
  height: 500px;
  border-style: solid;
  border-width: 2px;
}
.conttext{
  width: 500px;
  height: 500px;
  border-style: solid;
  border-width: 0.3px;

}
.contactdisplay{
  display: flex;
  justify-content: space-around;
  padding-bottom: 50px;
  margin-top: 30px;
}
.contsocials{
  display: flex;
  justify-content: space-evenly;
  margin-top: 50px;
}
.boxes{
  display: flex;
  justify-content: space-evenly;
  margin-top: 50px;
  color: white;
}
#email {
  font-size: 12px;
  text-decoration: none;
  color: white;
  
}
#phonenumber{
  font-size: 12px;
  text-decoration: none;
  color: white;
}
#email:hover{
  text-decoration: underline;
}
#phonenumber:hover{
  text-decoration: underline;
}
.phone{
  background-color: #8D7A4A;
  height: 200px;
  width: 160px;

}
.email{
  background-color: #672243;
  height: 200px;
  width: 160px;


}
#topBtn{
  color: white;
  text-decoration: underline;
  
}
#topBtn:hover{
  cursor: pointer;
}
@media screen and (max-width: 800px) {
  .name{
    display: none;
  }
  .navWrapper{
    align-items: center;
    justify-content: center;
    
    
    
  }
  ul{
    display: block;
  }
  ul p{
    
    margin-right: 0;
  }
  .menu{
    display: block;
  }
.welcomeimg{
  display: none;
}
.skillboxwrapper{
  display: grid;
  grid-template-columns: 40% 40%;
  width: 80%;
  margin: auto;
  justify-content: center;
  align-items: center;
  gap: 20px;

}
#footerLinks{
  display: flex;
  
}
#footerLinks a{
  margin-right: 10px;
}
.projectdisplaywrapper{
  
  display: block;
  margin: auto;
  margin-bottom: 80px;
  
  justify-content: center;
  align-items: center;
  gap: 5%;

}
.projectbox{
  margin: auto;
}
.btns{
  margin: auto;
  margin-bottom: 30px;
}
.area{
  
  display: block;
  margin-bottom: 30px;
  align-items: center;
  justify-content: center;
  padding-top: 60px;
  
}
.text1{
  margin: auto;
  width: 90%;
  margin-top: 20px;
}
.text2{
  margin: auto;
  margin-top: 20px;
}
.image1{
  margin: auto;
}
.image2{
  margin: auto;
  margin-top: 20px;
}
.image3{
  margin: auto;
}
.contimg{
  display: none;
}
  
}
@media screen and (max-width: 460px){
.title{
  text-align: center;
}

  #largeText{
   
    font-size: 46px;
    margin: auto;
    margin-bottom: 0;
  }
  #smallerText{
    font-size: 36px;
    margin: auto;
    margin-top: 0;
  }
  #welcomemsg{
    font-size: 12px;
    width: 320px;
    margin: auto;
    text-align: left;
  }
  #welcomeBtn{
    width: 150px;
    height: 30px;
    background-color: rgb(216, 216, 216);
    border-radius: 20px;
    border-style: none;
    margin: auto;
  }
  .welcmsgwrapper{
    width: 350px;
    text-align: center;
  }
  .skillswrapper h1{
    font-size: 60px;
    color: white;
  }
  .skillbox{
   
    max-height: 80px;
    min-height: 80px;
  }
  .skillbox h2{
    padding: 0;

  }
  .skillboxwrapper{
    
    gap: 5px;
  
  }
  .footerwrapper ul{
    display: flex;
    flex-direction: column;
  }
  .links{
    flex-direction: column;
  }
  .nameandlinks h1{
    text-align: center;
    
  }
  .hero{
    height: 30vh;
    background-image: url(../public/Web\ Developer.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    
  }
  .heroBtn{
   
    margin-top: 25vh;
    
  }
  
}

